--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aimware-loader-loader",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "Aimware loader loader so you dont have to download it every time!",
   "main": "index.js",
   "scripts": {
@@ -30,7 +30,7 @@
     "windows-shortcuts": "^0.1.6"
   },
   "build": {
-    "productName": "Aimware-loader-loader",
+    "productName": "aimware-loader-loader",
     "appId": "com.awloader",
     "win": {
       "icon": "assets/logo-256.png"
